--- a/Scripts/1.0_WEIGHT_LENGTH.Rmd
+++ b/Scripts/1.0_WEIGHT_LENGTH.Rmd
@@ -68,7 +68,8 @@ AIC(Model_Body_Weight)
 emmeans_weight <- emmeans(Model_Body_Weight, ~c(Set))
 pairs(emmeans_weight)
 
-  #Calculating repeatabilities (with week)
+#Calculating repeatabilities (with week) 
+# Will run with 10,000 bootstraps if required but not required atm
 
 rpt_weight2(Weight_Length_Control) -> rpt_body_weight_control 
 rpt_body_weight_control
@@ -97,7 +98,7 @@ anova(Model_Weight_1, Model_Weight_2) #calculating difference between two models
 
 violin_plot_bw <- function(df,param,lab1,lab2) { #only need to add dataframe, parameter, and labels for axes
   p <- ggplot(data = df,aes(x = Sex, y = param, fill = Set))+
-      scale_fill_manual(values=c("#1F968BFF","#74D055FF", "39568CFF","#440154FF"), labels = c("F1M", "F1P", "F1C", "F1T"))+ #color scheme
+      scale_fill_manual(values=c("#E69F00","#56B4E9", "#009E73","#999999"), labels = c("F1M", "F1P", "F1C", "F1T"))+ #color scheme
     geom_violin(alpha=0.4, position = position_dodge(width = .75),size=0.5,color="black")+ #violin plot to display distribution density
     geom_boxplot(notch = TRUE,  outlier.size = -1, color="black",lwd=0.9, alpha = 0.5)+#boxplot to display quantiles
     geom_point( shape = 21,size=2, position = position_jitterdodge(), color="black",alpha=1)+#scatterplot of individual data points
@@ -120,16 +121,6 @@ violin_plot_bw <- function(df,param,lab1,lab2) { #only need to add dataframe, pa
 violin_plot_bw(Weight_Length_Data, Weight_Length_Data$Weight_g, "Body weight (g) by age (weeks)", "g")+
   facet_grid(~Age_Weeks)
 
-# Summary
-Summary_Weight <- summarySE(Weight_Length_Data, measurevar="Weight_g", groupvars=c("Set", "Age_Weeks", "Sex"))
-
-Summary_Weight %>% kable() %>% kable_styling()
-
-Summary_Weight %>%
-  kbl(caption = "Body weight at age 30 weeks") %>%
-  kable_classic(full_width = F, html_font = "Cambria")%>%
-    row_spec(c(1,3,5,7), color = "white", background = "#666666")%>%
-  row_spec(c(2,4,6,8), color = "black", background = "#FFFFFF")
 
 
 
